ftp: Implement G_FILE_COPY_NOFOLLOW_SYMLINKS

https://bugzilla.gnome.org/show_bug.cgi?id=660077